# Miner

./: .gitignore  CMakeLists.txt  Empty_Template.epl  README.md  compile_dll.bat  elist.h  epl-language-notes.md  miner.h  ocl.c  pfnet_compiler.c  pfnet_miner.c  release.sh  util.c
PFNET/: CMakeLists.txt
PFNETPL/: CMakeList.txt  PFNETPL.c  PFNETPL.h  PFNETPLConvert.c  PFNETPLFunctions.h  PFNETPLInterpreter.c  PFNETPLMath.c  PFNETPLParser.c  PFNETPLTokenManager.c
crypto/: curve25519-donna.c
docker/: dockerfile
